--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CODETEXT</title>
+    <!--Boostarp CSS-->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<header>
+    <nav>
+        <a href="#">Accueil</a>
+        <a href="#">A propos</a>
+        <a href="#">Actualité</a>
+    </nav>
+</header>
+<section class="container">
+    <h1>Première approche de GIThub</h1>
+
+    <article>
+        <img src="#" alt="">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda et tenetur numquam maiores? Similique officiis dolor nam accusantium suscipit pariatur consequatur odio, tempore repudiandae obcaecati nisi aperiam earum doloribus minima!
+        Inventore odit vel tenetur corrupti voluptas aliquam accusantium reiciendis recusandae quidem non autem ut dolore dicta repellat quaerat vitae perspiciatis dolorem, distinctio ducimus! Illo explicabo eligendi laboriosam tenetur voluptate possimus.</p>
+    </article>
+
+    <article>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, temporibus inventore ipsam quasi beatae officia accusamus sequi unde quod laboriosam rem, delectus quidem provident totam sit ad, ex tenetur optio?</p>
+        <a href="#">plus d'informations </a>
+    </article>
+
+
+    <footer>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio numquam laboriosam ratione nesciunt sunt aperiam molestiae debitis error rem nobis!?</p>
+        <a href=#>Contacter-nous</a>
+    </footer>
+    </section>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
